<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="21dp"
        app:srcCompat="@mipmap/noimg" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/age"
        android:layout_alignTop="@+id/img"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/name_hint_str"
        android:inputType="textPersonName"
        android:textColorHint="#777777" />

    <TextView
        android:id="@+id/gender_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/img"
        android:layout_below="@+id/img"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:text="@string/gender_tag_str"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/saveBtn"
        android:layout_alignTop="@+id/gender_tag"
        android:entries="@array/genderArr" />

    <EditText
        android:id="@+id/age"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/age_hint_str"
        android:inputType="number"
        android:textColorHint="#777777" />

    <EditText
        android:id="@+id/classNum"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/age"
        android:layout_alignBottom="@+id/age"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/age"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/class_hint_str"
        android:inputType="number"
        android:textColorHint="#777777" />

    <EditText
        android:id="@+id/fNumber"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/pswd"
        android:layout_below="@+id/pswd"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/fNum_hint_str"
        android:inputType="phone"
        android:textColorHint="#777777" />

    <EditText
        android:id="@+id/mNumber"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/fNumber"
        android:layout_below="@+id/fNumber"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/mother_s_phone_number_hint_str"
        android:inputType="phone"
        android:textColorHint="#777777" />

    <EditText
        android:id="@+id/tNumber"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mNumber"
        android:layout_below="@+id/mNumber"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/teacher_s_phone_number_hint_str"
        android:inputType="phone"
        android:textColorHint="#777777" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imgUrl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_design"
        android:fontFamily="casual"
        android:text="@string/save_tag_str"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/pswd"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/emailAdd"
        android:layout_below="@+id/emailAdd"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="Password"
        android:inputType="textAutoComplete|textPassword"
        android:textColorHint="#777777" />

    <EditText
        android:id="@+id/imgUrl"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tNumber"
        android:layout_below="@+id/tNumber"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/image_url_str"
        android:inputType="textPersonName"
        android:textColorHint="#777777" />

    <EditText
        android:id="@+id/race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/gender_tag"
        android:layout_below="@+id/gender_tag"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="Ethnicity"
        android:inputType="textPersonName"
        android:textColorHint="#777777" />

    <EditText
        android:id="@+id/emailAdd"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/race"
        android:layout_below="@+id/race"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:textColorHint="#777777" />


</RelativeLayout>